--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -10,5 +10,7 @@
     <p><a href="{% url 'article_edit' my_article.pk %}">Edit</a></p>
     <p><a href="{% url 'article_delete' my_article.pk %}">Delete</a></p>
     <p>Back to <a href="{% url 'article_list' %}">All Articles</a></p>
+    <p><a href="{% url 'run_list' my_article.pk %}"><button  class="btn btn-success ml-2">List</button></a></p>
+
 
 {% endblock content %}
