--- a/templates/article_edit.html
+++ b/templates/article_edit.html
@@ -1,14 +1,23 @@
 {%  extends 'base.html' %}
 
 {% block content %}
-    <h1>Edit</h1>
-    <form action="" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-info ml-2" type="submit">
-            Update
-        </button>
-    </form>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Edit</h1>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button class="btn btn-info ml-2" type="submit">
+                        Update
+                    </button>
+                </form>
+                <br/>
+                 <a href="{% url 'article_detail' article.pk%}">BACK</a>
+            </div>
+        </div>
+    </div>
+
 
 
 {% endblock content %}
