--- a/templates/article_delete.html
+++ b/templates/article_delete.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Delete</h1>
-    <form action="" method="post">
-        {% csrf_token %}
-        <p>Are you sure you wish to delete {{ object.title }}</p>
-        <button class="btn btn-danger ml-2" type="submit">Confirm</button>
-    </form>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Delete</h1>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <p>Are you sure you wish to delete {{ object.title }}</p>
+                    <button class="btn btn-danger ml-2" type="submit">Confirm</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
 {% endblock content %}
