--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -4,7 +4,6 @@
 
 {% block content %}
     {% for article in object_list %}
-        {%  if article.show %}
             <div class="card">
                 <div class="card-header">
                     <span class="font-weight-bold">
@@ -18,6 +17,9 @@
                 <div class="card-body">
                     {{ article.body }}
                 </div>
+                <div class="card-body">
+                    Show List <span class="text-success">{{ article.show }}</span>
+                </div>
                 {# footer#}
                 <div class="card-footer text-center text-muted">
                     <a href="{% url 'article_edit' article.pk%}">Edit</a> |
@@ -25,7 +27,6 @@
                 </div>
             </div>
             <br>
-        {% endif %}
     {% endfor %}
 
 
